compiler-core/src/go/tests/snapshots/gleam_core__go__tests__assignments__tuple_matching.snap
---
source: compiler-core/src/go/tests/assignments.rs
expression: "\nfn go(x) {\n  let assert #(1, 2) = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  let assert #(1, 2) = x
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(x gleam_P.Tuple2_t[gleam_P.Int_t, gleam_P.Int_t]) gleam_P.Tuple2_t[
  gleam_P.Int_t,
  gleam_P.Int_t,
] {
  if gleam_P.Bool_t(!x.P_0.Equal(1)) || gleam_P.Bool_t(!x.P_1.Equal(2)) {
    panic(gleam_P.MakeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      map[string]any{"value": x },
    ))
  }
  return x
}
